tests/ui/reborrow/custom_marker_mut_a_b.stderr
error[E0499]: cannot borrow `a` as mutable more than once at a time
  --> $DIR/custom_marker_mut_a_b.rs:14:20
   |
LL |     let b = method(a);
   |                    - first mutable borrow occurs here
LL |     let c = method(a);
   |                    ^ second mutable borrow occurs here
LL |
LL |     let _ = (b, c);
   |              - first borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
